Devil's Fortune + New Util Methods + Blood Rush Model

--- a/src/main/resources/assets/rings_of_aeon/lang/en_us.json
+++ b/src/main/resources/assets/rings_of_aeon/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.rings_of_aeon.blood_rush": "Blood Rush",
+  "item.rings_of_aeon.devil_fortune": "Devil's Fortune",
 
   "block.rings_of_aeon.reliquia_pillar": "Reliquia Pillar",
 
